# Spotify-Web

./: .gitignore  README.md  pyproject.toml
django_app/django_app/: settings.py
flask-app/: app.py
flask-app/templates/: index.html
